overlay/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drawio
  annotations:
    # optional: disable TLS for dev
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - "drawio-dev.fairkom.net"
      secretName: drawio
  rules:
    - host: drawio-dev.fairkom.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: drawio
                port:
                  number: 80
